--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ endif()
 if (CMAKE_SYSTEM_NAME STREQUAL Android)
 	set(BUILD_ENGINE_TOOL OFF)
 	set(BUILD_ANDROID ON)
+	set(USE_OPENMP OFF)
 	add_definitions(-DANDROID)	
 endif()
 
@@ -192,13 +193,13 @@ if (USE_OPENMP)
 		endif()
 	elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 		# using Visual Studio C++
-		set(CMAKE_C_FLAGS "/openmp ${CMAKE_C_FLAGS}")
-		set(CMAKE_CXX_FLAGS "/openmp ${CMAKE_CXX_FLAGS}")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /openmp")
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp")
 		add_definitions(-DUSE_OPENMP)
 	else()
 		# using GCC & Clang++ (android)
-		set(CMAKE_CXX_FLAGS "-fopenmp ${CMAKE_CXX_FLAGS}")
-		set(CMAKE_C_FLAGS "-fopenmp ${CMAKE_C_FLAGS}")
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
 		add_definitions(-DUSE_OPENMP)
 	endif()
 endif()
