--- a/Projects/Android/SkylichtEngine/app/src/main/AndroidManifest.xml
+++ b/Projects/Android/SkylichtEngine/app/src/main/AndroidManifest.xml
@@ -11,13 +11,17 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.android.vending.BILLING" />
 
+    <!-- Tell the system this app requires OpenGL ES 3.0. -->
+    <uses-feature android:glEsVersion="0x00030000" android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SkylichtEngine">
+        android:theme="@style/Theme.SkylichtEngine"
+        android:hardwareAccelerated="true">
         <activity
             android:name=".FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
