--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,9 +54,11 @@ commands:
     steps:
       - run:
           command: >
-            cmake -S. -BPrjAndroid -DTARGET_ARCH=ANDROID -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake -DANDROID_ABI=arm64-v8a -DANDROID_ARM_NEON=ON -DANDROID_NATIVE_API_LEVEL=24
+            export ABI=arm64-v8a
 
-            make -C PrjAndroid
+            cmake -S. -BPrjAndroid-$ABI -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake -DANDROID_ABI=$ABI -DANDROID_ARM_NEON=ON -DANDROID_NATIVE_API_LEVEL=24
+
+            make -C PrjAndroid-$ABI
           name: Build Skylicht Engine Native SDK
 jobs:
   build-android:
