--- a/.gitattributes
+++ b/.gitattributes
@@ -46,10 +46,11 @@
 *.tga filter=lfs diff=lfs merge=lfs -text
 *.tif filter=lfs diff=lfs merge=lfs -text
 *.tiff filter=lfs diff=lfs merge=lfs -text
+# Compress Textures
+*.etc2 filter=lfs diff=lfs merge=lfs -text
 *.dds filter=lfs diff=lfs merge=lfs -text
 *.pvr filter=lfs diff=lfs merge=lfs -text
 *.etc filter=lfs diff=lfs merge=lfs -text
-*.etc2 filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.sanim filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
