--- a/Projects/Skylicht/Client/CMakeLists.txt
+++ b/Projects/Skylicht/Client/CMakeLists.txt
@@ -4,9 +4,10 @@ include_directories(
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Irrlicht/Include
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Engine/Source
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Components/Source
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Collision/Source
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Physics/Source	
 	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Lightmapper/Source
-	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Audio/Source
-	#${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Physics/Source	
+	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Audio/Source	
 )
 
 if (BUILD_DEBUG_VLD)
@@ -35,7 +36,7 @@ target_precompiled_header(Client ./Source/pch.cpp ${skylicht_client_source})
 
 set_target_properties(Client PROPERTIES VERSION ${SKYLICHT_VERSION})
 
-target_link_libraries(Client Engine Components Lightmapper)
+target_link_libraries(Client Engine Components Collision Physics Lightmapper)
 
 if (BUILD_DEBUG_VLD)
 	target_link_libraries(Client vld)
