Update config for build cross platform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ if (BUILD_SKYLICHT_NETWORK)
 	set(BUILD_CURL ON)
 	add_definitions(-DHAVE_CURL)
 	add_definitions(-DCURL_STATICLIB)
+	add_definitions(-DHTTP_ONLY)
 else()
 	set(BUILD_CURL OFF)
 endif()
