#123 Change working directory, implement select/load render mesh on editor

--- a/Projects/Editor/CMakeLists.txt
+++ b/Projects/Editor/CMakeLists.txt
@@ -302,4 +302,4 @@ if (BUILD_OPENSSL AND MSVC)
 endif()
 
 set_target_properties(SkylichtEditor PROPERTIES VERSION ${SKYLICHT_VERSION})
-set_target_properties(SkylichtEditor PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+set_target_properties(SkylichtEditor PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${SKYLICHT_ENGINE_SOURCE_DIR}/Assets")
