#88 Add online stream for play record or stream wav

--- a/Projects/Skylicht/Audio/CMakeLists.txt
+++ b/Projects/Skylicht/Audio/CMakeLists.txt
@@ -1,21 +1,22 @@
 include_directories(	
-	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Audio/Source
-	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/System/Source
-	${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/ThirdParty/source/libmpg123
+	${FIRSTCUT_SOURCE_DIR}/Source/Audio/Source
+	${FIRSTCUT_SOURCE_DIR}/Source/ThirdParty/source/libmpg123
+	${FIRSTCUT_SOURCE_DIR}/Source/System/Source
 )
 
 file(GLOB_RECURSE skylicht_audio_source 
 	./Source/*.cpp 
 	./Source/*.hpp 
 	./Source/*.c
-	./Source/*.h)
+	./Source/*.h
+	./Source/*.S)
 setup_project_group("${skylicht_audio_source}" ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(Audio STATIC ${skylicht_audio_source})
 
 target_precompiled_header(Audio ./Source/stdafx.cpp ${skylicht_audio_source})
 
-set_target_properties(Audio PROPERTIES VERSION ${SKYLICHT_VERSION})
+set_target_properties(Audio PROPERTIES VERSION ${FIRSTCUT_VERSION})
 
 if (BUILD_LINUX)
 	target_link_libraries(Audio 
