--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,9 @@ commands:
           command: >
             [ -w /usr/local/bin ] && SUDO="" || SUDO=sudo
 
-            $SUDO apt-get install cmake
+            $SUDO wget -q https://github.com/Kitware/CMake/releases/download/v3.15.5/cmake-3.15.5-Linux-x86_64.tar.gz
+
+            $SUDO tar -zxvf cmake-3.15.5-Linux-x86_64.tar.gz
           name: Install CMake
   install-ndk:
     description: Extend CircleCI's Android convenience images by installing a version of the Android NDK of your choice.
@@ -53,6 +55,8 @@ commands:
       - run:
           command: >
             export ABI=arm64-v8a
+
+            export PATH="./cmake-3.15.5-Linux-x86_64/bin:$PATH"
 
             cmake -S. -BPrjAndroid-$ABI -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/cmake/android.toolchain.cmake -DANDROID_ABI=$ABI -DANDROID_ARM_NEON=ON -DANDROID_NATIVE_API_LEVEL=24
 
