Fix multi osx architectures

--- a/Samples/LightmappingVertex/CMakeLists.txt
+++ b/Samples/LightmappingVertex/CMakeLists.txt
@@ -170,7 +170,7 @@ elseif (MSVC OR CYGWIN OR MINGW)
 elseif (BUILD_MACOS)
 	file(GLOB resources_files "${SKYLICHT_ENGINE_SOURCE_DIR}/Bin/*.zip")
 
-	set(angle_lib_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Angle/out/MacOS/Release")
+	set(angle_lib_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Angle/out/MacOS/Release/${CMAKE_OSX_ARCHITECTURES}")
 	file(GLOB dylib_files "${angle_lib_path}/*.dylib")
 
 	add_executable(SampleLightmappingVertex 
@@ -181,7 +181,7 @@ elseif (BUILD_MACOS)
 	
 	set_target_properties(SampleLightmappingVertex PROPERTIES MACOSX_BUNDLE TRUE)
 	
-	set(angle_lib_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Angle/out/MacOS/Release")
+	set(angle_lib_path "${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Angle/out/MacOS/Release/${CMAKE_OSX_ARCHITECTURES}")
 	
 	find_library(
 		LIBEGL 
