--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,12 +131,12 @@ jobs:
           cd PrjMac
           xcodebuild -configuration Release
           cd ..
-      - name: Unit Test
-        run: |
-          cd PrjMac
-          ctest --verpose --output-on-failure -C Release
-          cat Testing/Temporary/LastTest.log
-          cd ..
+      #- name: Unit Test
+      #  run: |
+      #    cd PrjMac
+      #    ctest --verpose --output-on-failure -C Release
+      #    cat Testing/Temporary/LastTest.log
+      #    cd ..
       - name: Package
         run: |
           brew install p7zip
