--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,8 +82,11 @@ if (CMAKE_SYSTEM_NAME STREQUAL Darwin)
 	add_definitions(-DUSE_ANGLE_GLES)
 
 	set(CMAKE_CXX_STANDARD 14)
-	# set(CMAKE_OSX_ARCHITECTURES "x86_64")
-	set(CMAKE_OSX_ARCHITECTURES "arm64")
+
+	if (NOT CMAKE_OSX_ARCHITECTURES)
+		# set(CMAKE_OSX_ARCHITECTURES "x86_64")
+		set(CMAKE_OSX_ARCHITECTURES "arm64")
+	endif()
 
 	# angle api defined
 	add_definitions(-DANGLE_USE_UTIL_LOADER)
