Rename project GUI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -278,7 +278,7 @@ subdirs (Projects/Skylicht/Physics)
 subdirs (Projects/Skylicht/Lightmapper)
 subdirs (Projects/Skylicht/Audio)
 subdirs (Projects/Skylicht/Crypto)
-subdirs (Projects/Skylicht/GUI)
+subdirs (Projects/Skylicht/UserInterface)
 
 if (BUILD_SKYLICHT_NETWORK)
 subdirs (Projects/Skylicht/Network)
