--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,11 +77,10 @@ if (CMAKE_SYSTEM_NAME STREQUAL Darwin)
 	set(BUILD_MACOS ON)
 	set(XCODE ON)
 	set(USE_OPENMP OFF)
+	set(CMAKE_WARN_DEPRECATED OFF)
 
 	add_definitions(-DMACOS)
 	add_definitions(-DUSE_ANGLE_GLES)
-
-	set(CMAKE_CXX_STANDARD 14)
 
 	if (NOT CMAKE_OSX_ARCHITECTURES)
 		# set(CMAKE_OSX_ARCHITECTURES "x86_64")
