--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,8 @@ if (CMAKE_SYSTEM_NAME STREQUAL Darwin)
 	add_definitions(-DMACOS)
 	add_definitions(-DUSE_ANGLE_GLES)
 
+	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lc++")
+
 	if (NOT CMAKE_OSX_ARCHITECTURES)
 		# set(CMAKE_OSX_ARCHITECTURES "x86_64")
 		set(CMAKE_OSX_ARCHITECTURES "arm64")
