--- a/Projects/Template/Platforms/IOS/plist.in
+++ b/Projects/Template/Platforms/IOS/plist.in
@@ -2,12 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>CFBundleDevelopmentRegion</key>
+  <string>English</string>
   <key>CFBundleDisplayName</key>
   <string>${PRODUCT_NAME}</string>
   <key>CFBundleExecutable</key>
   <string>${EXECUTABLE_NAME}</string>  
   <key>CFBundleIdentifier</key>
-  <string>${MACOSX_BUNDLE_BUNDLE_NAME}</string>    
+  <string>${MACOSX_BUNDLE_GUI_IDENTIFIER}</string>    
   <key>CFBundleName</key>
   <string>${MACOSX_BUNDLE_BUNDLE_NAME}</string>
   <key>CFBundlePackageType</key>
