Update for new IOS cmake toolchain

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ if (CMAKE_SYSTEM_NAME STREQUAL Linux)
 	add_definitions(-DLINUX)
 endif()
 
-if (CMAKE_SYSTEM_NAME STREQUAL Darwin)
+if (CMAKE_SYSTEM_NAME STREQUAL Darwin OR CMAKE_SYSTEM_NAME STREQUAL iOS)
 
 	if (IOS)
 		# IOS
